# timecapsule

./: .env.example  Cargo.toml  README.md
migrations/: 001_init.sql  002_email_notification.sql
src/: config.rs  crypto.rs  db.rs  email.rs  error.rs  main.rs  models.rs
src/jobs/: mod.rs
src/routes/: capsules.rs  mod.rs
static/: index.html
static/css/: style.css
static/js/: create.js  unlock.js
static/unlock/: index.html
